Added read me, updated front end to change colors upon getting link, and removed app.js

--- a/views/index.html
+++ b/views/index.html
@@ -38,15 +38,15 @@
             <input type="text" id="url-input" class="form-control" placeholder="Honey... I shrunk the url!">
             <span class="input-group-btn">
               <button class="btn btn-secondary btn-short" type="button">
-                <span>Babify Me!</span>
+                <span class='btn-text'>Babify Me!</span>
               </button>
             </span>
         </div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+    <div class="row link">
+      <div class="col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
         <div id="rtn-link"></div>
       </div>
     </div>
