--- a/public/css/babify.css
+++ b/public/css/babify.css
@@ -3,9 +3,13 @@ body {
   background-color: #22A7F0;
 }
 
-h1, p, span {
+h1, p, .btn-text{
   font-family: 'Montserrat', sans-serif;
   color: #ecf0f1;
+}
+
+a{
+  color: #000080;
 }
 
 .hero-text h1{
@@ -27,7 +31,7 @@ h1, p, span {
   padding-top: 90px;
 }
 
-.hero-text{
+.hero-text, .link{
   text-align: center;
 }
 
@@ -38,6 +42,13 @@ h1, p, span {
 
 .input-group-btn button{
   background-color: #FD4569;
+}
+
+#rtn-link{
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 60px;
+  border: 0px;
+  border-radius: 4px;
 }
 
 .form-control{
