--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
 <div class="page-wrapper">
   <div class="container inner-wrap">
     <div class="row hero-text">
-      <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2">
+      <div class="col-md-8 col-md-offset-2 col-xs-12">
         <h1>Babify</h1>
         <p class="slogan">Making all the world's links <b>infantesimal</b> one URL at a time.</p>
       </div>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="row link">
-      <div class="col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
+      <div class="col-md-6 col-md-offset-3 col-xs-12">
         <div id="rtn-link"></div>
       </div>
     </div>
